@@ -16,10 +16,16 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
+import java.lang.reflect.Array;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -34,7 +40,6 @@ public class FeedBackServiceTest {
     private FeedBackRepository feedBackRepository;
     @Mock
     private ReservationRepository reservationRepository;
-
     @Mock
     private RestaurantRepository restaurantRepository;
     private FeedBackService feedBackService;
@@ -43,7 +48,7 @@ public class FeedBackServiceTest {
     @BeforeEach
     void setup(){
         openMocks = MockitoAnnotations.openMocks(this);
-        feedBackService = new FeedBackServiceImpl(feedBackRepository, reservationRepository); // Tem que fazer o mock do feedbackRepository
+        feedBackService = new FeedBackServiceImpl(feedBackRepository, reservationRepository, restaurantRepository); // Tem que fazer o mock do feedbackRepository
     }
 
     @AfterEach
@@ -53,15 +58,18 @@ public class FeedBackServiceTest {
 
     @Test
     void shouldListAllFeedBacksByARestaurant(){
-        Restaurant resto = NewEntititesHelper.createARestaurant();
+        Restaurant restaurant = NewEntititesHelper.createARestaurant();
         FeedBack fb = NewEntititesHelper.createAFeedBack();
-        List<FeedBack> fbList = List.of(fb);
+        Pageable pageable = PageRequest.of(0,10);
+        List<FeedBack> fbList = Arrays.asList(fb);
 
-        when(restaurantRepository.save(resto)).thenReturn(resto);
-        when(feedBackRepository.save(fb)).thenReturn(fb);
-        when(feedBackRepository.getFeedBackByRestaurantId(fb.getRestaurantId())).thenReturn(fbList);
+        Page<FeedBack> fbPage = new PageImpl<>(fbList,pageable,fbList.size());
 
-        var listOfFB = feedBackService.getFeedBackByRestaurantId(resto.getId());
+        // Configuração dos mocks para o repositório
+        when(restaurantRepository.findById(restaurant.getId())).thenReturn(Optional.of(restaurant));
+        when(feedBackRepository.findByRestaurantId(restaurant.getId(), pageable)).thenReturn(fbPage);
+
+        var listOfFB = feedBackService.listFeedBackByRestaurantId(pageable, restaurant.getId());
 
         assertThat(listOfFB).contains(fb);
     }
